--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#363432</color>
+    <color name="button">#196774</color>
+    <color name="accent">#90A19D</color>
+    <color name="additional1">#F0941F</color>
+    <color name="additional2">#EF6024</color>
 </resources>
