--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,18 +31,22 @@
                     android:inputType="textPersonName"
                     android:text="Name"
                     android:textColor="@color/white"
-                    android:textColorHint="@color/white" />
+                    android:backgroundTint="@color/white" />
 
                 <ImageButton
                     android:id="@+id/imageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@color/transparent"
+                    app:tint="@color/white"
                     app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
 
                 <ImageButton
                     android:id="@+id/imageButton2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@color/transparent"
+                    app:tint="@color/white"
                     app:srcCompat="@android:drawable/btn_star" />
             </TableRow>
 
