--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="background">#363432</color>
+    <color name="background2">#292724</color>
     <color name="button">#196774</color>
     <color name="accent">#90A19D</color>
     <color name="additional1">#F0941F</color>
