--- a/app/src/main/res/drawable/gradient_tile.xml
+++ b/app/src/main/res/drawable/gradient_tile.xml
@@ -3,11 +3,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="@color/background"
-                android:endColor="#201F1C"
+                android:startColor="@color/tilecolor1"
+                android:endColor="@color/tilecolor2"
                 android:type="radial"
-                android:gradientRadius="800dp"
-                android:centerY="0"/>
+                android:gradientRadius="400dp"
+                android:centerY="0"
+                android:centerX="0"/>
         </shape>
     </item>
 </selector>
