--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="accent">#90A19D</color>
     <color name="additional1">#F0941F</color>
     <color name="additional2">#EF6024</color>
+    <color name="tilecolor1">#3C4557</color>
+    <color name="tilecolor2">#2A3347</color>
 </resources>
