--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="selected">#20FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="background">#363432</color>
     <color name="background2">#292724</color>
