--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
                 android:layout_height="48dp"
                 tools:ignore="UselessParent">
 
+
                 <EditText
                     android:id="@+id/editTextTextPersonName"
                     android:layout_width="0dp"
@@ -32,7 +33,8 @@
                     android:inputType="textCapCharacters"
                     android:text="@string/City"
                     android:textColor="@color/white"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:onClick="onClickSearch"/>
 
                 <ImageButton
                     android:id="@+id/imageButtonSearch"
@@ -41,7 +43,8 @@
                     android:background="@color/transparent"
                     app:srcCompat="@drawable/outline_search_48"
                     android:layout_weight="1"
-                    android:contentDescription="Search" />
+                    android:contentDescription="Search"
+                    android:onClick="onClickSearch"/>
 
                 <ImageButton
                     android:id="@+id/imageButtonFav"
@@ -50,7 +53,8 @@
                     android:background="@color/transparent"
                     app:srcCompat="@drawable/outline_favorite_border_48"
                     android:layout_weight="1"
-                    android:contentDescription="Favourite" />
+                    android:contentDescription="Favourite"
+                    android:onClick="onClickFav" />
 
                 <ImageButton
                     android:id="@+id/imageButtonMenu"
@@ -59,7 +63,8 @@
                     android:background="@color/transparent"
                     app:srcCompat="@drawable/outline_menu_48"
                     android:layout_weight="1"
-                    android:contentDescription="Menu" />
+                    android:contentDescription="Menu"
+                    android:onClick="onClickMenu" />
 
             </TableRow>
         </TableLayout>
