--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -29,21 +29,22 @@
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:layout_weight="2"
-                    android:textColor="@color/white"
-                    android:background="none"
-                    android:textSize="48sp"
                     android:gravity="center"
-                    android:hint="@string/City_here"/>
+                    android:hint="@string/City_here"
+                    android:textColor="@color/white"
+                    android:background="@color/transparent"
+                    android:textSize="48sp" />
 
                 <ImageButton
                     android:id="@+id/imageButtonSerach"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:background="@color/transparent"
-                    app:srcCompat="@drawable/outline_search_48"
-                    app:tint="@color/white"
                     android:layout_weight="1"
-                    android:contentDescription="AddToFav" />
+                    android:background="@color/transparent"
+                    android:contentDescription="Search"
+                    android:onClick="onClickSearch"
+                    app:srcCompat="@drawable/outline_search_48"
+                    app:tint="@color/white" />
 
             </LinearLayout>
 
@@ -117,7 +118,6 @@
                 tools:ignore="UselessParent">
 
                 <TextView
-                    android:id="@+id/textLastUpdated"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
@@ -128,6 +128,7 @@
                     android:text="@string/LastUpdated" />
 
                 <TextView
+                    android:id="@+id/textLastUpdated"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
@@ -215,13 +216,11 @@
                     android:gravity="center"
                     android:text="@string/Value" />
 
-                <ImageButton
+                <ImageView
                     android:id="@+id/imageTypeOfClouds"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:background="@color/transparent"
-                    app:srcCompat="@drawable/cloud_solid_48"
-                    app:tint="@color/clouds"
                     android:layout_weight="1"
                     android:contentDescription="TypeOfClouds" />
             </LinearLayout>
