--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentFavourite">
+    tools:context=".FragmentFavourite"
+    android:id="@+id/linLayout"
+    android:orientation="vertical">
 
 
 
